--- a/website/views/pages/customers/dashboard.ejs
+++ b/website/views/pages/customers/dashboard.ejs
@@ -1,6 +1,6 @@
 <div id="dashboard" v-cloak>
   <div class="container pb-5 px-3 px-xl-0">
-    <div class="pb-3">
+    <div class="pb-4">
       <h3>Your license</h3>
       <div purpose="license-card" class="card card-body">
         <div class="row">
@@ -28,9 +28,9 @@
       </div>
     </div>
 
-    <div class="row pt-0 pt-lg-3">
-      <div class="col-12 col-lg-6">
-      <h3 class="pb-3 pb-xl-3">Your details</h3>
+    <div class="row pb-4">
+      <div class="col-12 col-lg-6 pb-4">
+      <h3 class="pt-2 pt-sm-3">Your details</h3>
         <div purpose="details-card" class="card card-body justify-content-top">
           <div class="row">
             <div class="col-sm-4 col-12 pb-2 pb-sm-0">Organization:</div>
@@ -62,8 +62,8 @@
         </div>
       </div>
 
-      <div class="col-12 col-lg-6 pt-4 pt-lg-0">
-        <h3 class="pb-3 pb-xl-3">Billing and payment</h3>
+      <div class="col-12 col-lg-6">
+        <h3 class="pt-2 pt-sm-3">Billing and payment</h3>
         <div purpose="billing-card" class="card card-body justify-content-center">
           <div class="row pb-3 mx-0">
             <div style="max-width: 16px;" class="col-1 px-0"><img style="margin-top: 5px; height: 12px; width: 16px;" src="/images/icon-card-32x24@2x.png" alt="A credit card Icon"></div>
@@ -93,7 +93,7 @@
       </div>
 
     </div>
-    <div class="pt-4 d-flex flex-md-row flex-column">
+    <div class="d-flex flex-md-row flex-column">
         <a class="btn btn-info btn-sm btn-md-block mr-md-3 mb-3 mb-md-0" purpose="deploy-button" href="/docs/deploying/introduction">
           How to deploy Fleet
         </a>
