--- a/website/views/pages/customers/dashboard.ejs
+++ b/website/views/pages/customers/dashboard.ejs
@@ -29,7 +29,7 @@
     </div>
 
     <div class="row pb-4">
-      <div class="col-12 col-lg-6 pb-4">
+      <div class="col-12 col-lg-6 pb-4 pb-lg-0">
       <h3 class="pt-2 pt-sm-3">Your details</h3>
         <div purpose="details-card" class="card card-body justify-content-top">
           <div class="row">
@@ -93,7 +93,7 @@
       </div>
 
     </div>
-    <div class="d-flex flex-md-row flex-column">
+    <div class="d-flex flex-md-row flex-column pt-3">
         <a class="btn btn-info btn-sm btn-md-block mr-md-3 mb-3 mb-md-0" purpose="deploy-button" href="/docs/deploying/introduction">
           How to deploy Fleet
         </a>
