--- a/website/views/pages/entrance/forgot-password.ejs
+++ b/website/views/pages/entrance/forgot-password.ejs
@@ -1,5 +1,5 @@
 <div id="forgot-password" v-cloak>
-  <div style="max-width:  480px;" class="container-fluid pt-5 px-3 px-xl-0 pb-5">
+  <div style="max-width: 480px;" class="container-fluid px-3 px-xl-0 pb-5">
     <div v-if="!cloudSuccess">
     <h1 class="text-left">Forgot your password?</h1>
       <div purpose="customer-portal-form">
@@ -7,7 +7,6 @@
           <ajax-form  action="sendPasswordRecoveryEmail" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
             <div class="form-group">
               <label for="email-address">Email</label>
-              <span style="float: right" class="text-right"><a href="/customers/login">I have an account</a></span>
               <input type="email" name="email-address" class="form-control" placeholder="example@email.com" :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" autocomplete="email" focus-first>
               <div class="invalid-feedback" v-if="formErrors.emailAddress">Please enter a valid email address.</div>
             </div>
