Customer portal style updates (#3615)
* style changes

* changes from fine art pass 2

* Update dashboard.less

* Update signup.less

* changes from call

* Update dashboard.ejs

* update padding

* Update dashboard.ejs

* Update forgot-password.ejs

* keep full signup form visible after input

* revert formrules change

--- a/website/assets/styles/pages/customers/new-license.less
+++ b/website/assets/styles/pages/customers/new-license.less
@@ -1,6 +1,9 @@
 #new-license {
+  padding-top: 80px;
+
   h1 {
     font-size: 28px;
+    line-height: 38px;
   }
   a {
     color: @core-vibrant-blue;
@@ -9,12 +12,10 @@
     text-decoration: none;
     color: darken(@core-vibrant-blue, 20%);
   }
-  p {
-    font-size: 16px;
-  }
   h3 {
     font-size: 20px;
     font-weight: 700;
+    margin-bottom: 0px;
   }
 
   input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
@@ -30,6 +31,7 @@
   }
 
   [purpose='customer-portal-form'] {
+
     label {
       font-weight: 700;
       margin-bottom: 4px;
@@ -42,12 +44,12 @@
       border-radius: 6px;
     }
     .card-body {
-      padding: 30px;
+      padding: 2em;
     }
   }
 
   [purpose='submit-button'] {
-    width: 200px;
+
     margin-left: auto;
     margin-right: auto;
     border-radius: 4px;
@@ -67,7 +69,8 @@
   }
 
   [purpose='features-list'] {
-    // min-width: 254px;
+    padding-left: 40px;
+    font-size: 14px;
     word-wrap: overflow;
    ul {
      list-style-type: none;
@@ -83,6 +86,19 @@
     margin-right: 8px;
    }
 
+  }
+
+  @media (max-width: 768px) {
+    padding-top: 60px;
+  }
+
+  @media (max-width: 576px) {
+    padding-top: 40px;
+    [purpose='customer-portal-form'] {
+      .card-body {
+        padding: 1.5em 1em;
+      }
+    }
   }
 
 
