--- a/website/assets/styles/pages/customers/dashboard.less
+++ b/website/assets/styles/pages/customers/dashboard.less
@@ -1,10 +1,13 @@
 #dashboard {
+  padding-top: 80px;
   h1 {
     font-size: 28px;
+    line-height: 38px;
   }
   h3 {
     padding-bottom: 16px;
     font-size: 24px;
+    margin-bottom: 0px;
   }
   a {
     text-decoration: underline;
@@ -31,7 +34,7 @@
       border-radius: 6px;
     }
     .card-body {
-      padding: 30px;
+      padding: 2em;
     }
   }
 
@@ -72,9 +75,10 @@
     border: 1px solid #C5C7D1;
     border-radius: 4px;
     padding: 8px 40px;
-    line-height: 24px;
+    line-height: 20px;
     &:hover {
       background: #fff;
+      color: @core-fleet-black;
     }
     &:focus {
       box-shadow: none;
@@ -84,20 +88,22 @@
       height: 20px;
       width: auto;
       padding-right: 4px;
+      margin-bottom: 1px;
     }
     a {
       color: @core-fleet-black;
-      text-decoration: none;
     }
+    text-decoration: none;
   }
   [purpose='deploy-button'] {
     font-size: 16px;
-    line-height: 24px;
+    line-height: 20px;
     padding: 8px 40px;
     border-radius: 4px;
-    a {
+    color: white;
+    text-decoration: none;
+    &:hover {
       color: white;
-      text-decoration: none;
     }
   }
 
@@ -113,6 +119,7 @@
     padding: 16px;
     p {
       font-size: 14px;
+      margin-block-end: 0px;
     }
     a {
       font-size: 14px;
@@ -126,6 +133,22 @@
     min-height: 312px;
     p {
       margin-block-end: 4px;
+    }
+    [purpose='contact'] {
+      background: #F1F0FF;
+      border: 1px solid #D9D9FE;
+      box-sizing: border-box;
+      border-radius: 4px;
+      padding: 16px;
+      p {
+        font-size: 14px;
+        margin-block-end: 0px;
+      }
+      a {
+        font-size: 14px;
+        font-weight: 700;
+        text-underline-offset: 5px;
+      }
     }
 
   }
@@ -146,6 +169,7 @@
     }
 
     strong {
+      font-size: 14px;
       padding-bottom: 8px;
     }
 
@@ -180,16 +204,21 @@
 
   }
 
+
   @media (max-width: 991px) {
 
     [purpose='details-card'] {
       min-height: auto;
     }
-
+    [purpose='billing-card'] {
+      // padding: 40px;
+      min-height: auto;
+    }
 
   }
 
   @media (max-width: 768px) {
+    padding-top: 60px;
 
     [purpose='modal-content'] {
       margin-top: 50px;
@@ -207,6 +236,16 @@
 
     [purpose='billing-card'] {
       padding: 40px 20px;
+    }
+  }
+
+
+  @media (max-width: 576px) {
+    padding-top: 40px;
+    [purpose='customer-portal-form'] {
+      .card-body {
+        padding: 1em;
+      }
     }
   }
 
