--- a/website/assets/styles/pages/entrance/new-password.less
+++ b/website/assets/styles/pages/entrance/new-password.less
@@ -1,6 +1,8 @@
 #new-password {
+  padding-top: 80px;
   h1 {
     font-size: 28px;
+    line-height: 38px;
   }
   a {
     color: @core-vibrant-blue;
@@ -26,7 +28,7 @@
       border-radius: 6px;
     }
     .card-body {
-      padding: 30px;
+      padding: 2em;
     }
   }
 
@@ -67,6 +69,18 @@
     margin-right: 8px;
    }
 
+  }
+  @media (max-width: 768px) {
+    padding-top: 60px;
+  }
+
+  @media (max-width: 576px) {
+    padding-top: 40px;
+    [purpose='customer-portal-form'] {
+      .card-body {
+        padding: 1.5em 1em;
+      }
+    }
   }
 
 }
