Loading states for dashboard: hosts, software, activity feed

--- a/frontend/pages/Homepage/_styles.scss
+++ b/frontend/pages/Homepage/_styles.scss
@@ -67,4 +67,19 @@
       }
     }
   }
+
+  .host-sections {
+    position: relative;
+  }
+
+  .spinner {
+    z-index: 11;
+    opacity: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
