--- a/frontend/components/side_panels/HostSidePanel/_styles.scss
+++ b/frontend/components/side_panels/HostSidePanel/_styles.scss
@@ -1,6 +1,10 @@
 .host-side-panel {
   color: $core-fleet-black;
 
+  .loading-spinner {
+    margin-top: 155px; // line up with host table loading spinner
+  }
+
   .input-icon-field {
     margin-top: 0;
 
