--- a/website/views/pages/customers/new-license.ejs
+++ b/website/views/pages/customers/new-license.ejs
@@ -13,7 +13,7 @@
                 <label for="numberOfHosts">Total number of devices</label>
                 <input class="form-control" min="1" purpose="quote-input" id="numberOfHosts" type="number" :class="[formErrors.numberOfHosts ? 'is-invalid' : formErrors.numberOfHosts < 1 ]" focus-first v-model.trim="formData.numberOfHosts" v-if="!showQuotedPrice">
                 <div class="invalid-feedback" v-if="formErrors.numberOfHosts">Please enter a number of hosts</div>
-                <span style="position: relative; cursor: text;" class="form-control" @click="clickResetForm()" v-if="showQuotedPrice">{{formData.numberOfHosts}}<span style="position: absolute; bottom: 10px; right: 16px;" class="text-muted fa fa-times-circle pl-2"></span></span>
+                <span style="position: relative; cursor: text; padding: 6px 16px 8px 16px;" class="form-control" @click="clickResetForm()" v-if="showQuotedPrice">{{formData.numberOfHosts}}<span style="position: absolute; bottom: 10px; right: 16px;" class="text-muted fa fa-times-circle pl-2"></span></span>
               </div>
 
               <div style="color: #515774;" class="order-last text-left text-sm-right col-12 col-sm-6 pr-0 pl-sm-4 pl-0 pt-sm-4">
