--- a/website/assets/styles/pages/query-library.less
+++ b/website/assets/styles/pages/query-library.less
@@ -64,7 +64,7 @@
   }
 
   .btn-secondary {
-    font-family: Nunito;
+    font-family: Nunito Sans;
     color: @core-vibrant-blue;
     background-color: transparent;
     border: 0;
@@ -78,7 +78,7 @@
   .filters {
     height: 54px;
     p {
-      font-family: Nunito;
+      font-family: Nunito Sans;
       font-size: 16px;
       line-height: 25px;
     }
