--- a/frontend/components/forms/fields/Radio/_styles.scss
+++ b/frontend/components/forms/fields/Radio/_styles.scss
@@ -18,9 +18,10 @@
       & + .radio__control::before {
         position: absolute;
         content: "";
-        width: 10px;
-        height: 10px;
+        width: 11px;
+        height: 11px;
         box-shadow: inset 1em 1em $core-vibrant-blue;
+        background-color: $core-vibrant-blue;
         border-radius: 50%;
         top: 3px;
         left: 3px;
