--- a/website/views/pages/customers/new-license.ejs
+++ b/website/views/pages/customers/new-license.ejs
@@ -7,13 +7,13 @@
 
       <div purpose="customer-portal-form" class="order-first flex-grow-1">
         <div class="card card-body">
-          <ajax-form action="createQuote" :class="[showBillingForm ? 'pb-2' : '' ]" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-errors.sync="formErrors" :form-data="formData" :form-rules="quoteFormRules" @submitted="submittedQuoteForm($event)">
+          <ajax-form action="createQuote" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-errors.sync="formErrors" :form-data="formData" :form-rules="quoteFormRules" @submitted="submittedQuoteForm($event)">
             <div class="d-flex flex-column flex-sm-row">
               <div class="form-group flex-grow-1 col-12 col-sm-6 order-first px-0 mb-3 mb-sm-5">
                 <label for="numberOfHosts">Total number of devices</label>
-                <input class="form-control" min="1" purpose="quote-input" id="numberOfHosts" type="number" :class="[formErrors.numberOfHosts ? 'is-invalid' : formErrors.numberOfHosts < 1 ]" focus-first v-model.trim="formData.numberOfHosts" v-if="!showQuotedPrice">
+                <input class="form-control" min="1" purpose="quote-input" id="numberOfHosts" type="number" :class="[formErrors.numberOfHosts ? 'is-invalid' : formErrors.numberOfHosts < 1 ]" focus-first v-model.trim="formData.numberOfHosts" v-if="!numberOfHostsQuoted">
                 <div class="invalid-feedback" v-if="formErrors.numberOfHosts">Please enter a number of hosts</div>
-                <span style="position: relative; cursor: text; padding: 6px 16px 8px 16px;" class="form-control" @click="clickResetForm()" v-if="showQuotedPrice">{{formData.numberOfHosts}}<span style="position: absolute; bottom: 10px; right: 16px;" class="text-muted fa fa-times-circle pl-2"></span></span>
+                <span style="position: relative; cursor: text; padding: 6px 16px 8px 16px;" class="form-control" @click="clickResetForm()" v-if="numberOfHostsQuoted">{{formData.numberOfHosts}}<span style="position: absolute; cursor: pointer; bottom: 10px; right: 16px;" class="text-muted fa fa-times-circle pl-2"></span></span>
               </div>
 
               <div style="color: #515774;" class="order-last text-left text-sm-right col-12 col-sm-6 pr-0 pl-sm-4 pl-0 pt-sm-4">
@@ -24,19 +24,21 @@
 
             </div>
             <cloud-error purpose="cloud-error" v-if="cloudError && !showBillingForm"></cloud-error>
-            <ajax-button style="height: 40px;" purpose="submit-button" spinner="true" type="submit" :syncing="syncing" class="btn btn-block btn-lg btn-info" v-if="!showBillingForm && !showQuotedPrice">Continue</ajax-button>
+            <div class="mt-2 pt-3 pb-3 border-top d-flex flex-row" v-if="showQuotedPrice">
+              <div class="order-first">
+                <strong>Order total</strong>
+              </div>
+              <div class="ml-auto">
+                <strong>${{!showQuotedPrice ? quotedPrice : formData.numberOfHosts * 12}}.00 /year</strong>
+              </div>
+            </div>
+            <div  :class="[showBillingForm ? 'pt-2' : '' ]" v-if="!showBillingForm">
+              <ajax-button style="height: 40px;" purpose="submit-button" spinner="true" type="submit" :syncing="syncing" class="btn btn-block btn-lg btn-info" v-if="!numberOfHostsQuoted">Continue</ajax-button>
+              <ajax-button style="height: 40px;" spinner="true" purpose="submit-button" :syncing="syncing" class="btn btn-block btn-lg btn-info" @click="clickScheduleDemo" v-if=" showQuotedPrice && numberOfHostsQuoted > 100">Schedule a demo</ajax-button>
+              <ajax-button style="height: 40px;" spinner="true" purpose="submit-button" :syncing="syncing" class="btn btn-block btn-lg btn-info" v-if="showQuotedPrice && numberOfHostsQuoted <= 100">Continue</ajax-button>
+            </div>
           </ajax-form>
-          <div class="pt-3 pb-3 border-top d-flex flex-row" v-if="showQuotedPrice">
-            <div class="order-first">
-              <strong>Order total</strong>
-            </div>
-            <div class="ml-auto">
-              <strong>${{quotedPrice}}.00 /year</strong>
-            </div>
-          </div>
-          <ajax-button style="height: 40px;" spinner="true" purpose="submit-button" :syncing="syncing" class="btn btn-block btn-lg btn-info" @click="clickScheduleDemo" v-if="!showBillingForm && showQuotedPrice">Schedule a demo</ajax-button>
         </div>
-
         <div class="card card-body mt-3" v-if="showBillingForm">
           <h3 class="pb-3">Billing information</h3>
           <ajax-form action="saveBillingInfoAndSubscribe" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-errors.sync="formErrors" :form-data="formData" :form-rules="billingFormRules" @submitted="submittedPaymentForm()">
