--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -39,7 +39,7 @@
             Single source of truth
           </h3>
           <p>
-            Track and segment your enrolled hosts. Search by important details, and zoom in on individual targets.
+            Search for any device data using SQL queries, monitor your devices and respond to incidents quickly.
           </p>
           <div class="container d-flex justify-content-center justify-content-lg-start align-items-center px-0">
             <img alt="macOS logo" src="/images/os-macos-black-31x35@2x.png" style="width: auto; height: 36px;" class="mr-4" />
